--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,27 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>SimplePolice</artifactId>
 	<groupId>com.voidcity.SimplePolice-Project</groupId>
+	<artifactId>SimplePolice</artifactId>
 	<version>6.1.4</version>
 	<packaging>pom</packaging>
 
+	<name>SimplePolice Parent</name>
+	<description>A comprehensive police system for Minecraft servers</description>
+
 	<modules>
-		<module>SimplePolice-Plugin</module>
 		<module>SimplePolice-API</module>
+		<module>SimplePolice-Plugin</module>
 	</modules>
 
+	<properties>
+		<java.version>17</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spigot.version>1.21-R0.1-SNAPSHOT</spigot.version>
+	</properties>
 
 	<repositories>
 		<!-- This adds the Spigot Maven repository to the build -->
@@ -42,7 +51,7 @@
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
-			<version>1.19-R0.1-SNAPSHOT</version>
+			<version>${spigot.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -50,6 +59,51 @@
 			<groupId>com.github.MilkBowl</groupId>
 			<artifactId>VaultAPI</artifactId>
 			<version>1.7.1</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<!-- Adventure API for modern text components -->
+		<dependency>
+			<groupId>net.kyori</groupId>
+			<artifactId>adventure-api</artifactId>
+			<version>4.16.0</version>
+		</dependency>
+
+		<!-- Modern command framework -->
+		<dependency>
+			<groupId>cloud.commandframework</groupId>
+			<artifactId>cloud-paper</artifactId>
+			<version>1.8.4</version>
+		</dependency>
+
+		<!-- Configuration framework -->
+		<dependency>
+			<groupId>org.spongepowered</groupId>
+			<artifactId>configurate-yaml</artifactId>
+			<version>4.1.2</version>
+		</dependency>
+
+		<!-- For unit testing -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>5.10.2</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- For mocking in tests -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>5.11.0</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- JetBrains Annotations -->
+		<dependency>
+			<groupId>org.jetbrains</groupId>
+			<artifactId>annotations</artifactId>
+			<version>24.1.0</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
@@ -64,4 +118,63 @@
 			<url>https://repo.codemc.io/repository/maven-snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.12.1</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					<encoding>UTF-8</encoding>
+					<compilerArgs>
+						<arg>-sourcepath</arg>
+						<arg>${project.basedir}/src/main/java</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.5.2</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<createDependencyReducedPom>false</createDependencyReducedPom>
+							<filters>
+								<filter>
+									<artifact>*:*</artifact>
+									<excludes>
+										<exclude>META-INF/*.SF</exclude>
+										<exclude>META-INF/*.DSA</exclude>
+										<exclude>META-INF/*.RSA</exclude>
+									</excludes>
+								</filter>
+							</filters>
+							<relocations>
+								<relocation>
+									<pattern>net.kyori</pattern>
+									<shadedPattern>com.voidcity.simplepolice.libs.kyori</shadedPattern>
+								</relocation>
+								<relocation>
+									<pattern>cloud.commandframework</pattern>
+									<shadedPattern>com.voidcity.simplepolice.libs.cloud</shadedPattern>
+								</relocation>
+								<relocation>
+									<pattern>org.spongepowered.configurate</pattern>
+									<shadedPattern>com.voidcity.simplepolice.libs.configurate</shadedPattern>
+								</relocation>
+							</relocations>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
